--- a/src/layouts/components/rangeSlider/rangeSlider.css
+++ b/src/layouts/components/rangeSlider/rangeSlider.css
@@ -4,28 +4,29 @@
 
 .multi-range-slider .bar-left {
   width: 25%;
-  background-color: #e7e7e7;
+  background-color: #E8E8E8 !important;
   border-radius: 10px 0px 0px 10px;
-  box-shadow: inset 0px 0px 0px black;
-  padding: 4px 0px;
+  box-shadow: none !important;
+  padding: 1px 0 !important;
 }
 
 .multi-range-slider .bar-right {
   width: 25%;
-  background-color: #e7e7e7;
+  background-color: #E8E8E8 !important;
   border-radius: 0px 10px 10px 0px;
-  box-shadow: inset 0px 0px 0px black;
+  box-shadow: none !important;
+  padding: 1px 0 !important;
 }
 
 .multi-range-slider .bar-inner {
-  background-color: var(--bar-inner-background);
+  background-color: #00B4B4 !important;
   display: flex;
   flex-grow: 1;
   flex-shrink: 1;
   position: relative;
-  border: none;
+  border: none !important;
   justify-content: space-between;
-  box-shadow: inset 0px 0px 0px gray;
+  box-shadow: none !important;
 }
 
 .multi-range-slider .thumb .caption * {
@@ -35,9 +36,9 @@
   font-size: 75%;
   text-align: center;
   line-height: 30px;
-  background-color: transparent;
+  background-color: #00B4B4 !important;
+  color: white !important;
   border-radius: 15px;
-  color: transparent;
   box-shadow: 0px 0px 0px black;
   padding: 0px 5px;
   white-space: nowrap;
@@ -46,15 +47,16 @@
 .multi-range-slider {
   display: flex;
   position: relative;
-  border: solid 1px gray;
+  border: none !important;
   border-radius: 10px;
-  padding: 8px 0 16px 0;
+  padding: 15px 10px !important;
   margin: 0px 8px 0px 10px;
   flex-direction: column;
   -webkit-touch-callout: none;
   -webkit-user-select: none;
   -moz-user-select: none;
   user-select: none;
+  box-shadow: none !important;
 }
 
 .multi-range-slider .thumb::before {
@@ -63,12 +65,18 @@
   position: absolute;
   width: 20px;
   height: 20px;
-  border: solid 3px gray; /* black  */
-  box-shadow:
-    0px 0px 0px black,
-    inset 0px 0px 0px gray;
+  border: 2px solid #00B4B4 !important;
+  box-shadow: none !important;
   border-radius: 50%;
   z-index: 1;
   margin: -7px -12px;
   cursor: pointer;
+}
+
+.multi-range-slider .thumb .caption {
+  background-color: #00B4B4 !important;
+  color: white !important;
+  font-size: 0.75rem !important;
+  padding: 2px 6px !important;
+  border-radius: 4px !important;
 }
