--- a/src/styles/navigation.scss
+++ b/src/styles/navigation.scss
@@ -1,5 +1,5 @@
 .header {
-  @apply bg-body py-6 dark:bg-darkmode-body;
+  @apply sticky top-0 z-50 bg-white py-6;
 }
 
 // navbar items
@@ -8,26 +8,30 @@
 }
 
 .navbar-brand {
-  @apply text-xl font-semibold text-dark dark:text-darkmode-dark;
+  @apply text-xl font-semibold text-dark;
   image {
     @apply max-h-full max-w-full;
   }
 }
 
 .navbar-nav {
-  @apply text-center;
+  @apply text-center lg:text-left;
 }
 
-// .nav-item {
-//   @apply text-light;
-// }
+// navbar items
+.nav-item {
+  @apply mx-3;
+}
 
 .nav-link {
-  @apply block p-3 font-bold text-2xl transition text-light hover:text-dark dark:text-darkmode-text dark:hover:text-darkmode-primary lg:px-2 lg:py-3 cursor-pointer;
+  @apply p-3 text-lg font-medium text-dark transition hover:text-primary;
+  &.active {
+    @apply text-primary;
+  }
 }
 
 .nav-active {
-  @apply text-dark dark:text-darkmode-dark;
+  @apply text-dark;
 }
 
 .nav-dropdown {
@@ -35,7 +39,7 @@
 }
 
 .nav-dropdown-list {
-  @apply z-10 rounded bg-body p-4 shadow dark:bg-darkmode-theme-dark;
+  @apply z-10 rounded bg-white p-4 shadow;
 }
 
 .nav-dropdown-item {
@@ -43,7 +47,7 @@
 }
 
 .nav-dropdown-link {
-  @apply block py-1 font-medium text-xl text-light transition hover:text-dark dark:text-darkmode-text dark:hover:text-darkmode-primary;
+  @apply block py-1 font-medium text-xl text-dark transition hover:text-primary;
 }
 
 //theme-switcher
@@ -59,7 +63,7 @@
   }
 
   span {
-    @apply absolute -top-1 left-0 dark:lg:left-4 flex h-6 w-6 items-center justify-center rounded-full bg-dark transition-all duration-300 dark:bg-white;
+    @apply absolute -top-1 left-0 flex h-6 w-6 items-center justify-center rounded-full bg-dark transition-all duration-300;
   }
 
   input:checked + label {
@@ -71,23 +75,74 @@
 
 // search style
 .search-icon {
-  @apply cursor-pointer transition text-white dark:text-black bg-black dark:bg-white;
+  @apply cursor-pointer p-2 text-xl text-dark hover:text-primary;
 }
 
 .search-modal {
-  @apply invisible absolute left-0 right-0 top-0 z-10 h-10 bg-white opacity-0 transition dark:bg-darkmode-theme-light md:h-full;
-  .form-input {
-    @apply h-full w-full border-0 text-lg;
-  }
-  .search-close {
-    @apply absolute right-2 top-1/2 -translate-y-1/2 p-3 text-h4;
-  }
+  @apply invisible absolute left-0 right-0 top-0 z-10 h-10 bg-white opacity-0 transition;
   &.open {
-    @apply visible opacity-100;
+    @apply visible top-0 opacity-100;
+  }
+  &-input {
+    @apply form-input h-full w-full border-0 text-lg;
+  }
+  &-close {
+    @apply absolute right-2 top-1/2 -translate-y-1/2 p-3 text-h4;
   }
 }
 
 // footer items
 .footer-link {
-  @apply text-sm md:text-base font-medium transition text-light hover:text-dark dark:text-darkmode-text dark:hover:text-darkmode-primary;
+  @apply text-sm md:text-base font-medium transition text-dark hover:text-primary;
+}
+
+// mobile menu
+.mobile-menu {
+  @apply fixed top-0 z-50 h-screen w-full overflow-y-auto bg-white p-6 text-center;
+  @apply invisible opacity-0 transition-all duration-300;
+  
+  &.show {
+    @apply visible opacity-100;
+  }
+  
+  @screen lg {
+    @apply static block h-auto w-auto bg-transparent p-0 text-left opacity-100;
+  }
+}
+
+// mobile menu button
+.mobile-menu-btn {
+  @apply inline-block h-8 w-8 cursor-pointer p-1 lg:hidden;
+  
+  span {
+    @apply relative block h-[2px] w-full bg-dark transition;
+    &::before,
+    &::after {
+      @apply absolute left-0 h-[2px] w-full bg-dark transition-all duration-300;
+      content: "";
+    }
+    &::before {
+      @apply -top-2;
+    }
+    &::after {
+      @apply top-2;
+    }
+  }
+  
+  &.show {
+    @apply relative;
+    span {
+      @apply bg-transparent;
+      &::before,
+      &::after {
+        @apply top-0;
+      }
+      &::before {
+        transform: rotate(45deg);
+      }
+      &::after {
+        transform: rotate(-45deg);
+      }
+    }
+  }
 }
